# wacom-display-switcher

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  Taskfile.yml  displays.cpp  displays.hpp  main.cpp  wacom.cpp
.github/workflows/: build-x11.yml
config/: io.github.irishpatrick.WacomDisplaySwitcher.yml
src/: aabb.hpp  displays.cpp  displays.hpp  instancemutex.cpp  instancemutex.hpp  main.cpp  ui.cpp  ui.hpp  wacom.cpp  wacom.hpp
